--- a/Magento_Paypal/templates/express/shortcut.phtml
+++ b/Magento_Paypal/templates/express/shortcut.phtml
@@ -32,23 +32,24 @@ $isInCatalogProduct = (bool) $block->getIsInCatalogProduct();
 <div class="paypal checkout <?= /* @noEscape */ $labelPosition ?> paypal-logo <?= /* @noEscape */ $shortcutHtmlId ?>"
 >
     <input type="image"
-           x-data="initPayPalExpress(<?= $isInCatalogProduct ? 'true' : 'false' ?>)"
-           @click.prevent="submitForm()"
+           x-data="initPayPalExpress"
+           data-is-in-catalog-product="<?= $isInCatalogProduct ? 'true' : 'false' ?>"
+           @click.prevent="submitForm"
            src="<?= $escaper->escapeUrl($block->getImageUrl()) ?>"
            alt="<?= $escaper->escapeHtmlAttr(__('Checkout with PayPal')) ?>"
            title="<?= $escaper->escapeHtmlAttr(__('Checkout with PayPal')) ?>"/>
     <?php if ($block->getAdditionalLinkImage()): ?>
         <?php $linkImage = $block->getAdditionalLinkImage(); ?>
         <a href="<?= $escaper->escapeUrl($linkImage['href']) ?>">
-            <img loading="lazy" src="<?= $escaper->escapeHtmlAttr($linkImage['src']) ?>" />
+            <img loading="lazy" alt="" src="<?= $escaper->escapeHtmlAttr($linkImage['src']) ?>" />
         </a>
     <?php endif; ?>
 </div>
 
 <script>
-    function initPayPalExpress(isInCatalogProduct) {
+    function initPayPalExpress() {
         return {
-            isInCatalogProduct,
+            isInCatalogProduct: JSON.parse(this.$root.dataset.isInCatalogProduct),
             returnUrlId: 'return_url',
             submitForm() {
                 if (this.isInCatalogProduct) {
@@ -79,5 +80,11 @@ $isInCatalogProduct = (bool) $block->getIsInCatalogProduct();
             }
         }
     }
+    (() => {
+        const initFn = () => Alpine.data('initPayPalExpress', initPayPalExpress);
+        window.Alpine
+            ? initFn()
+            : window.addEventListener('alpine:init', initFn, {once: true})
+    })()
 </script>
 <?php $hyvaCsp->registerInlineScript() ?>
