--- a/Magento_GiftMessage/templates/php-cart/gift-options-body.phtml
+++ b/Magento_GiftMessage/templates/php-cart/gift-options-body.phtml
@@ -16,12 +16,12 @@ use Magento\Framework\View\Element\Template;
 
 ?>
 
-<div class="flex flex-col gap-6 w-full" :class="inSlideOut ? '' : 'md:flex-row'">
-    <div x-show="formBlockVisibility && hasActiveOptions" class="w-full order-1" :class="inSlideOut ? '' : 'md:flex-row'">
+<div class="flex flex-col gap-6 w-full" :class="inSlideOutClasses">
+    <div x-show="showAdditionalOptions" class="w-full order-1" :class="inSlideOutClasses">
         <?= $block->getChildHtml('additional-options') ?>
     </div>
     <template x-if="isGiftMsgEnabled">
-        <div x-show="formBlockVisibility" class="w-full order-2" :class="inSlideOut ? '' : 'md:flex-row'">
+        <div x-show="formBlockVisibility" class="w-full order-2" :class="inSlideOutClasses">
             <?= $block->getChildHtml('gift-message') ?>
         </div>
     </template>
@@ -29,7 +29,7 @@ use Magento\Framework\View\Element\Template;
 <div x-show="formBlockVisibility" class="gift-options-buttons w-full order-3">
     <div class="actions-toolbar my-6">
         <div class="primary">
-            <button type="button" class="action action-update btn btn-primary" @click.prevent="submitGiftOption()">
+            <button type="button" class="action action-update btn btn-primary" @click.prevent="submitGiftOption">
                 <span><?= $escaper->escapeHtml(__('Update')) ?></span>
             </button>
         </div>
