--- a/Magento_Wishlist/templates/options_list.phtml
+++ b/Magento_Wishlist/templates/options_list.phtml
@@ -6,30 +6,48 @@
  * See https://hyva.io/license
  */
 
+use Hyva\Theme\ViewModel\HyvaCsp;
 use Magento\Framework\Escaper;
 use Magento\Wishlist\Block\Customer\Wishlist\Item\Options;
 
 /** @var Options $block */
 /** @var Escaper $escaper */
-?>
+/** @var HyvaCsp $hyvaCsp */
 
-<?php $options = $block->getOptionList(); ?>
-<?php if ($options): ?>
+$options = $block->getOptionList();
+if (! $options) {
+    return;
+}
+?>
+<script>
+    function initWishlistItemOptions() {
+        return hyva.createBooleanObject('showTooltip', false, {
+            tooltipId() {
+                return this.$id('product-details-tooltip')
+            }
+        })
+    }
+    (() => {
+        const initFn = () => Alpine.data('initWishlistItemOptions', initWishlistItemOptions);
+        window.Alpine
+            ? initFn()
+            : window.addEventListener('alpine:init', initFn, {once: true})
+    })()
+
+</script>
+<?php $hyvaCsp->registerInlineScript(); ?>
     <div class="items-center justify-start flex tooltip my-2">
         <div
-            x-data="{
-                showTooltip: false,
-                tooltipId: $id('product-details-tooltip')
-            }"
+            x-data="initWishlistItemOptions"
             class="relative z-30 inline-flex"
         >
             <button
                 type="button"
-                @mouseover.prevent.stop="showTooltip = true"
-                @mouseleave.prevent.stop="showTooltip = false"
-                @focus="showTooltip = true"
-                @focusout="showTooltip = false"
-                @keydown.escape="showTooltip = false"
+                @mouseover.prevent.stop="setShowTooltipTrue"
+                @mouseleave.prevent.stop="setShowTooltipFalse"
+                @focus="setShowTooltipTrue"
+                @focusout="setShowTooltipFalse"
+                @keydown.escape="setShowTooltipFalse"
                 :aria-labelledby="tooltipId"
             >
                 <?= $escaper->escapeHtml(__('See Details')) ?>
@@ -39,7 +57,7 @@ use Magento\Wishlist\Block\Customer\Wishlist\Item\Options;
                     <div
                         :id="tooltipId"
                         class="
-                            absolute top-0 left-0 z-10 w-64 p-2 -mt-6 text-sm leading-tight text-black transform
+                            absolute top-0 left-0 z-10 w-64 -mt-6 text-sm leading-tight text-black transform
                             -translate-x-full md:-translate-x-1/3 -translate-y-full bg-white rounded-lg shadow-lg p-4
                         "
                     >
@@ -59,8 +77,7 @@ use Magento\Wishlist\Block\Customer\Wishlist\Item\Options;
                             <?php endforeach; ?>
                         </dl>
                     </div>
-                    <svg class="absolute z-10 w-8 h-8 text-white transform -translate-x-full -translate-y-8
-                                fill-current stroke-current"
+                    <svg class="absolute z-10 w-8 h-8 text-white transform -translate-x-full -translate-y-8 fill-current stroke-current"
                          width="12"
                          height="12"
                     >
@@ -70,4 +87,3 @@ use Magento\Wishlist\Block\Customer\Wishlist\Item\Options;
             </div>
         </div>
     </div>
-<?php endif ?>
